@@ -42,6 +42,9 @@ Changes to Squid-2.4.DEVEL3 ():
 	- PURGE now also purges the DNS cache
 	- HEAD on FTP objects no longer retreives the whole object
 	- More cleanups of the dstdomain ACL type
+	- Squid no longer tries to do Range internally if it is not supported
+	  by the origin server. Doing so could cause bandwidth spikes and/or
+	  negative hit ratio.
 
 Changes to Squid-2.4.DEVEL2 ():
 
